--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>hello, webpack</h1>
+<div class="image-area"></div>
 <script type="module" src="./dist/main.js"></script>
 </body>
 </html>
