html webpack plugin #1

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 <body>
 <h1>hello, webpack</h1>
 <div class="image-area"></div>
-<script type="module" src="./dist/main.js"></script>
+<!--<script type="module" src="../dist/main.js"></script>-->
 </body>
 </html>
