--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document<%= env %></title>
+	<!-- 이 주석은 빌드되면 안보여야 해용!!! 👻 -->
 </head>
 <body>
 <h1>hello, webpack</h1>
