--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
 <h1>hello, webpack</h1>
 <div class="image-area"></div>
+<ul id="user-list"></ul>
 <!--<script type="module" src="../dist/main.js"></script>-->
 </body>
 </html>
