--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
 <form id="search-form"></form>
 <ul id="user-list"></ul>
 <!--<script type="module" src="../dist/main.js"></script>-->
+<script src="axios.min.js"></script>
 </body>
 </html>
